fix: overflow-x on schedule not working on iPhone

--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -20,7 +20,6 @@
 	grid-template-columns: 10rem auto;
 	gap: 2rem;
 	position: relative;
-	overflow-x: hidden;
 }
 
 .cloud {
@@ -112,11 +111,13 @@
 	bottom: -10rem;
 	left: -10rem;
 }
+
 @media only screen and (max-width: 1100px) {
 	.event-heading {
 		width: 100%;
 	}
 }
+
 @media only screen and (max-width: 600px) {
 	.schedule {
 		background-image: url(/SVGs/snowflake1.svg), url(/SVGs/snowflake2.svg), url(/SVGs/xGroup.svg);
